# nutsweb

./: .dockerignore  .env.production.example  .gitignore  API.md  Dockerfile  docker-compose.yml  pyproject.toml
deploy/: nutsweb-fetch.service  nutsweb-fetch.timer
django_project/: settings.py  urls.py
misc/: live_result.json
nuts/: admin.py  api.py  apps.py  checks.py  models.py
nuts/management/commands/: fetch_current_broadcasts.py  list_broadcasts.py
nuts/migrations/: 0001_initial.py  0002_alter_genre_options_alter_mood_options_genre_created_and_more.py
scripts/: list_broadcasts_api.py
