[project]
name = "nutsweb"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "django ~=5.1",
  "django-allauth[openid,socialaccount] ~=65.2",
  "django-debug-toolbar ~=4.4",
  "crispy-bootstrap5 ~=2024.10",
  "gunicorn ~=23.0",
  "whitenoise ~=6.7",
  "django-extensions>=3.2.3",
  "nutstosoup @ https://github.com/tiktuk/nutstosoup.git",
  "environs>=14.1.0",
  "dj-database-url>=2.3.0",
]

[dependency-groups]
dev = [
  "typing_extensions ~=4.12",
]
